Fix in dark mode

--- a/Ordem Paranormal - Oficial Jambo Editora/ordemparanormal.css
+++ b/Ordem Paranormal - Oficial Jambo Editora/ordemparanormal.css
@@ -2307,6 +2307,10 @@ sheet-main .repcontainer[data-groupname="repeating_investigation"] .sheet-contai
     margin-right: 10px
 }
 
+.sheet-rolltemplate-darkmode {
+    color: black !important;
+}
+
 .sheet-rolltemplate-ordem-paranormal {
     font-size: 12px;
     box-sizing: border-box;
